# python-premium-bond-checker

./: .coveragerc  .gitignore  .mise.toml  .pre-commit-config.yaml  README.md  client.py  main.py  pyproject.toml  test_script.py
.github/: renovate.json
.github/workflows/: main.yml  publish.yml
premium-bond-checker/: client.py
premium_bond_checker/: client.py  test_script.py
tests/: client_tests.py  test_client.py
tests/fixtures/: next_draw_valid.html
