[tool.poetry]
name = "premium-bond-checker"
version = "0.1.0"
description = "Simple premium bond checker library"
authors = ["Malachi Soord <inverse.chi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
